refactor, reworking frontend
